tests/suite/snapshots/suite__parse__tests__parse__bad-program.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-program.xi:1:5]
   │
 1 │ What
   ·     ┬  
   ·     ╰── Unexpected EOF
───╯

